--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -49,7 +49,12 @@ button.search__button {
   display: flex;
   gap: 1rem;
   overflow-x: scroll;
+  align-items: stretch;
   padding-bottom: 1rem;
+}
+
+.scrollable-section__item > * {
+  height: 100%;
 }
 
 .scrollable-section__list::-webkit-scrollbar {
@@ -64,6 +69,7 @@ button.search__button {
 .scrollable-section__item {
   width: 300px;
   flex-shrink: 0;
+  height: 100%;
 }
 
 .event-card {
