--- a/static/styles/ui/input.css
+++ b/static/styles/ui/input.css
@@ -15,3 +15,14 @@ input {
   line-height: 1.5rem;
   outline: none;
 }
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  /* For Firefox */
+  -moz-appearance: textfield;
+}
